# security_middleware

./: .gitignore  CLAUDE.md  README.md  SECURITY.md
.claude/: settings.local.json
config/: security_policy.yaml
nodes/: legacy_relay.py
ros2_security/: package.xml  setup.cfg  setup.py
ros2_security/ros2_security/: __init__.py  legacy_relay.py  policy_loader.py  secure_echo.py  secure_node_mixin.py  security_manager.py
ros2_security_demo/: package.xml  setup.cfg  setup.py
ros2_security_demo/launch/: demo.launch.py  demo_relay.launch.py
ros2_security_demo/ros2_security_demo/: demo_legacy_publisher.py  demo_publisher.py  demo_relay.py  demo_subscriber.py
ros2_security_msgs/: CMakeLists.txt  package.xml
ros2_security_msgs/msg/: SecureEnvelope.msg
scripts/: generate_certs.sh
tests/: conftest.py  test_kill_switch.py  test_mixed_trust.py  test_policy_loader.py  test_secure_node_mixin.py  test_security_manager.py
tools/: secure_echo.py
