<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_security_demo</name>
  <version>0.1.0</version>
  <description>Demo publisher and subscriber for testing ros2_security combinations.</description>
  <maintainer email="fredi@radix.com.mx">Fredi Romo</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ros2_security</exec_depend>
  <exec_depend>ros2_security_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
